# bagofholding

./: .coveragerc  .gitattributes  CITATION.cff  LICENSE  pyproject.toml
.binder/: environment.yml  postBuild
.ci_support/: environment-benchmark.yml  environment-dev.yml  environment-nbtests.yml  environment-widget.yml  environment-workflow.yml  environment.yml  lower_bound.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/disabled-workflows/: preview-release.yml
.github/workflows/: daily.yml  dependabot-pr.yml  pr-labeled.yml  pr-target-opened.yml  preview-hatch.yml  preview-release.yml  push-pull.yml  release.yml  weekly.yml
bagofholding/: __init__.py  bag.py  content.py  exception.py  exceptions.py  metadata.py  retrieve.py  trie.py  types.py  widget.py
bagofholding/classes/: bag.py  content.py  dtypes.py  widget.py
bagofholding/h5/: bag.py  content.py  context.py  dtypes.py  restructured.py  triebag.py  widget.py
bagofholding/instances/: __init__.py  bag.py  content.py  h5.py  pickle.py
docs/: README.md  conf.py  environment.yml  index.rst
notebooks/: example.ipynb  multiple_bags_per_file.ipynb  tutorial.ipynb
tests/benchmark/: test_benchmark.py  trie_scaling.py
tests/integration/: test_end_to_end.py  test_notebook.py  test_readme.py
tests/static/: abstract_bag_test.py  objects.py
tests/unit/: test_bag.py  test_bag_implementations.py  test_cases.py  test_h5bag.py  test_metadata.py  test_restructuredh5bag.py  test_retrieve.py  test_tests.py  test_trie.py  test_trieh5bag.py  test_types.py
