[build-system]
requires = [
    "bidict",
    "h5py",
    "numpy",
    "setuptools",
    "versioneer[toml]==0.29",
]
build-backend = "setuptools.build_meta"

[project]
name = "bagofholding"
description = "bagofholding - Your pyiron-like module."
readme = "docs/README.md"
keywords = [ "pyiron",]
requires-python = ">=3.9, <3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "bidict==0.23.1",
    "h5py==3.12.1",
    "numpy==2.1.3",
]
dynamic = [ "version",]
authors = [
    { name = "Lorem Ipsum", email = "lorem@ipsum.com" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://pyiron.org/"
Documentation = "https://bagofholding.readthedocs.io"
Repository = "https://github.com/pyiron/bagofholding"

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "bagofholding/_version.py"
parentdir_prefix = "bagofholding"
tag_prefix = "bagofholding-"

[tool.setuptools.packages.find]
include = [ "bagofholding*",]

[tool.setuptools.dynamic.version]
attr = "bagofholding.__version__"

[tool.ruff]
exclude = ["docs", "notebooks", "setup.py", "_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"] #ignore line-length violations

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in init files -- we specify APIs this way

[tool.black]
extend-exclude = '''
(
  ^/docs
)
'''

[tool.mypy]
ignore_missing_imports = true
exclude = ['docs/conf.py']
# strict = true  # You can mix strict and per-module settings
# https://github.com/python/mypy/issues/11401
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
# Ideally, slowly turn these back on -- typing in tests is great
check_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_defs = false


[[tool.mypy.overrides]]
module = "notebooks.*"
# Leave these off -- we don't demand typing in notebooks
check_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
